--- a/products.html
+++ b/products.html
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>product</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-       <!--Name:Prante paul,ID:2221948--> 
+       <!--Name:Prante paul,ID:2221948-->
+       <script src = "script.js"></script> 
 </body>
 </html>
