added property of css and js

--- a/index.html
+++ b/index.html
@@ -9,5 +9,38 @@
    <!--Name:Prante paul,ID:2221948--> 
    <script src = "script.js"></script>
 
+   <header>
+    <h1>Elegant Jewelry</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <section class="home">
+        <div class="home-content">
+            <h2>Exquisite Jewelry for Every Occasion</h2>
+            <p>Discover our beautiful collection of handcrafted jewelry, designed to make you shine on every occasion.</p>
+            <button class="cta-button" onclick="showMessage()">Learn More</button>
+        </div>
+        <div class="home-image">
+            <img src="jewelry-home.jpg" alt="Jewelry Collection">
+        </div>
+    </section>
+</main>
+
+<footer>
+    <p>&copy; 2025 Elegant Jewelry. All Rights Reserved.</p>
+    <div class="social-media">
+        <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+        <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+        <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+    </div>
+</footer>
+
 </body>
 </html>
