fixes info in contact page

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <!-- Contact Details -->
             <div class="contact-details">
                 <p><strong>Phone:</strong> +1 234 567 890</p>
-                <p><strong>Email:</strong> support@elegantjewelr.com</p>
+                <p><strong>Email:</strong> elegantajwellery@gmail.com</p>
               
             </div>
         </section>
